# claude-devtools

./: .editorconfig  .gitignore  .oxfmtrc.json  .oxlintrc.json  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  components.json  docker-compose.yml  electron.vite.config.ts  eslint.config.js  knip.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.test.json  vite.config.ts  vite.sidecar.config.ts  vite.standalone.config.ts  vitest.config.ts  vitest.critical.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: analytics.rs  cache.rs  commands.rs  lib.rs  main.rs  sidecar.rs  watcher.rs
src-tauri/src/analysis/: chunk_builder.rs  chunk_factory.rs  commands.rs  content_search.rs  context_accumulator.rs  error_hotspots.rs  file_graph.rs  mod.rs  process_linker.rs  semantic_step_extractor.rs  semantic_step_grouper.rs  timeline_gap_filling.rs  tokenizer.rs  tool_analytics.rs  tool_execution_builder.rs  tool_linking.rs
src-tauri/src/analytics/: aggregate.rs  buckets.rs  cost.rs  duration.rs  forecasting.rs  mod.rs  model_comparison.rs  productivity.rs  session_scan.rs  types.rs
src-tauri/src/config/: commands.rs  manager.rs  mod.rs  triggers.rs  types.rs  validation.rs
src-tauri/src/discovery/: content_filter.rs  mod.rs  ongoing_detector.rs  path_decoder.rs  project_scanner.rs  session_lister.rs  subagent_locator.rs  subagent_resolver.rs  subproject_registry.rs
src-tauri/src/notifications/: commands.rs  error_detector.rs  manager.rs  mod.rs  trigger_checker.rs  trigger_matcher.rs  trigger_tester.rs  types.rs
src-tauri/src/parsing/: deduplication.rs  entry_parser.rs  message_classifier.rs  metrics.rs  mod.rs  session_parser.rs  tool_extraction.rs
src-tauri/src/ssh/: agent_discovery.rs  commands.rs  config_parser.rs  connection_manager.rs  mod.rs  retry.rs  (+2 more)
(+496 files in other folders)
