[package]
name = "claude-devtools"
version = "0.4.8"
description = "Desktop app that visualizes Claude Code session execution"
authors = ["claude-devtools contributors"]
edition = "2021"

[lib]
name = "claude_devtools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "time"] }
which = "7"
