[package]
name = "claude-devtools"
version = "0.4.8"
description = "Desktop app that visualizes Claude Code session execution"
authors = ["claude-devtools contributors"]
edition = "2021"

[lib]
name = "claude_devtools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "time", "rt-multi-thread", "sync", "net", "macros"] }
notify = { version = "7", features = ["macos_fsevent"] }
notify-debouncer-full = "0.4"
dirs = "6"
lru = "0.12"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
russh = "0.48"
russh-sftp = "2.0"
russh-keys = "0.48"
glob = "0.3"
async-trait = "0.1"
